[package]
name = "cache-ro"
version = "0.3.1"
edition = "2024"
description = "A high-performance, thread-safe persistent cache with TTL support"
license = "MIT OR Apache-2.0"
authors = ["Kak Smko <ba.smko@gmail.com>"]
repository = "https://github.com/kak-smko/cache-ro"
documentation = "https://docs.rs/cache-ro"
readme = "README.md"
keywords = ["cache", "cache-persistent", "cache-memory"]
categories = ["caching", "data-structures", "filesystem"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.1",features = ["serde"] }
sha2 = "0.10.9"
dashmap = "6.1.0"
lazy_static = "1.5.0"